--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ env:
   global:
     - RELEASE_TESTING=1
     - AUTHOR_TESTING=1
+    - HELPERS_DEBUG=1
 before_install:
   - git clone git://github.com/haarg/perl-travis-helper ~/perl-travis-helper
   - source ~/perl-travis-helper/init
